--- a/HexanchusGriseus/bluntnose/.vscode/vex_project_settings.json
+++ b/HexanchusGriseus/bluntnose/.vscode/vex_project_settings.json
@@ -4,9 +4,9 @@
 		"json": 2
 	},
 	"project": {
-		"name": "Basking",
+		"name": "bluntnose",
 		"description": "",
-		"creationDate": "1/16/2025, 11:06:21 PM",
+		"creationDate": "1/23/2025, 1:57:54 PM",
 		"platform": "V5",
 		"language": "python",
 		"slot": 1,
