--- a/HexanchusGriseus/bluntnose v1/bluntnose-v1/.vscode/vex_project_settings.json
+++ b/HexanchusGriseus/bluntnose v1/bluntnose-v1/.vscode/vex_project_settings.json
@@ -4,12 +4,12 @@
 		"json": 2
 	},
 	"project": {
-		"name": "Basking",
+		"name": "bluntnose-v1",
 		"description": "",
-		"creationDate": "1/16/2025, 11:06:21 PM",
+		"creationDate": "2/5/2025, 11:42:03 PM",
 		"platform": "V5",
 		"language": "python",
-		"slot": 2,
+		"slot": 1,
 		"sdkVersion": "V5_1_0_1_25",
 		"python": {
 			"main": "src/main.py"
